Fixed z-index conflict between communities and timeline modal

--- a/css/css.css
+++ b/css/css.css
@@ -363,7 +363,7 @@ div.timeline-modal {
     align-content: center;
     align-items: center;
     position: fixed;
-    z-index: 1;
+    z-index: 2;
     left: 0;
     top: 0;
     width: 100%;
